Changed: terse openapi yaml file
