# api/v1/oas_validators_gen.go
@@ -10,25 +10,6 @@ import (
 	"github.com/ogen-go/ogen/validate"
 )
 
-func (s *AddProjectRequest) Validate() error {
-	var failures []validate.FieldError
-	if err := func() error {
-		if s.Identifier == nil {
-			return errors.New("nil is invalid value")
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "identifier",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
-
 func (s *GetProjectRequest) Validate() error {
 	var failures []validate.FieldError
 	if err := func() error {
